--- a/padrao.APP/package.json
+++ b/padrao.APP/package.json
@@ -35,6 +35,7 @@
         "@fullcalendar/rrule": "4.4.2",
         "@fullcalendar/timegrid": "4.4.2",
         "@ngneat/transloco": "2.22.0",
+        "@tinymce/tinymce-angular": "4.1.0",
         "apexcharts": "3.28.1",
         "crypto-js": "3.3.0",
         "highlight.js": "11.2.0",
@@ -54,7 +55,8 @@
         "web-animations-js": "2.3.2",
         "zone.js": "0.11.4",
         "file-saver": "2.0.5",
-        "xlsx": "0.17.0"
+        "xlsx": "0.17.0",
+        "tinymce": "5.5.1"
     },
     "devDependencies": {
         "@angular-devkit/build-angular": "12.2.3",
